test/zinc_source/compile_errors/operators/18_unsupported_range_operator.zn
// expected-error: operator '\.\.' cannot be overloaded

struct Span {
    value: i64

    fn operator..(left, right) -> Self {
        return left
    }
}

fn main() {
    span = Span { value: 1 }
}
